<resources>
    <string name="app_name">Triza</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_post_gig">Post Gig</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="sub_category">Sub \nCategory</string>
    <string name="featured_gigs">Featured Gigs</string>
    <string name="create_gig">Create a new gig</string>
    <string name="trending_gigs">Trending Gigs</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_delete">Delete</string>
    <string name="continue_button">Continue</string>
    <string name="gig_tag_hint">Separate each tags with \",\"</string>
    <string name="gig_title">Gig Title</string>
    <string name="search_tags">Search \nTags</string>
    <string name="gig_title_hint">Try making your title short, descriptive and catchy</string>

    <string name="overview">Overview</string>
    <string name="empty_favorites_short">Your Favorites are empty</string>
    <string name="empty_favorites_long">Favorite Gigs help you keep track of the Gigs that you find interesting so that you can
    access them again at a later time.</string>
    <string name="gig_image">Gig image</string>
    <string name="report_gig">Report gig</string>
    <string name="share_gig">Share gig</string>
    <string name="seller_profile">Seller\'s profile</string>
    <string name="content_description">images</string>
    <string name="search_description">Search through database of freelance services on Triza.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seperate_by_comma"> 5 tags max, each tags can be separated with comma \",\"</string>
    <string name="five_tags_max"> 5 tags max</string>
    <string name="package_name">Package \nName</string>
    <string name="package_description">Package  \nDescription</string>
    <string name="describe_your_package_in_details">Describe your package in details</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="price">Price</string>
    <string name="extra_offers">Extra Offers</string>
    <string name="extra_fast_delivery">Extra Fast Delivery</string>
    <string name="additional_revision">Additional Reviews</string>
    <string name="select_cat">Select category and sub category</string>
    <string name="input_search_tags">Input search tags</string>
    <string name="add_your_package_name">Add your package name</string>
    <string name="service_time">Select delivery time</string>
    <string name="enter_price">Add your minimum price</string>
    <string name="add_custom_offer">Add Custom Offer</string>
    <string name="hint_custom_extra">Make your custom extra brief as possible</string>
    <string name="gig_description">Enter your Gig description</string>
    <string name="briefly_describe_your_gig">Briefly describe your gig</string>
    <string name="add_faq">Add FAQ</string>
    <string name="update">UPDATE</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="add_pictures_to_gallery">Add pictures to your to your gallery to improve your gig quality</string>
    <string name="crop_image">Crop Image</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_photo">Delete photo</string>
    <string name="set_photo_as_main">Set photo as main</string>

    <string-array name="show_guidelines">
        <item>On Touch</item>
        <item>On</item>
        <item>Off</item>
    </string-array>
</resources>
