<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/crop_image_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height"
        android:layout_gravity="top"
        android:background="@color/white"
        android:elevation="@dimen/elevation">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_close_black_24dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/crop_image"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tool_bar_text_size"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_check_black_24dp" />


            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <com.theartofdev.edmodo.cropper.CropImageView
        android:id="@+id/crop_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        app:cropScaleType="fitCenter" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/rotate_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_rotate_left_black_24dp"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:text="Rotate" />


            <TextView
                android:id="@+id/flip_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_flip_black_24dp"
                android:gravity="center"
                android:text="Flip hori." />

            <TextView
                android:id="@+id/tv_crop_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_transform_black_24dp"
                android:gravity="center"
                android:text="Crop." />

            <TextView
                android:id="@+id/flip_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_flip_to_front_black_24dp"
                android:gravity="center"
                android:text="Flip vert." />




            <TextView
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_rotate_right_black_24dp"
                android:gravity="center"
                android:text="Reset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_delete_grey_24dp"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/delete_photo"
                android:textColor="@color/red"
                android:textSize="15dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/rotate_left"
                android:background="@color/grey" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/set_photo_as_main"
                android:textColor="@color/colorAccent"
                android:textSize="15dp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>